# TI-SPO-Lab3

./: CMakeLists.txt  main.cpp
ErrorDetector/: ErrorDetector.cpp  ErrorDetector.h
Shennon_algorithm/: Coder.cpp  Coder.h  Decoder.cpp  Decoder.h
TransmissionChannel/: TransmissionChannel.cpp  TransmissionChannel.h
data/: code  codedMessage  message  probabilityOfOccurrence
util/: Reader.h  VectorUtil.h  Writer.h
util/StringParser/: StringParser.cpp  StringParser.h
